--- a/etc/paraevo.yaml
+++ b/etc/paraevo.yaml
@@ -19,6 +19,7 @@ status_period: 60
 # MQTT server options. "server" is mandatory, other options - not
 mqtt:
   server: 192.168.0.100
+  port: 1883
   login: theuser
   password: thepassword
   retain: true
